[package]
name = "tailcall-valid"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_setters = "0.1.6"
regex = "1.11.0"
thiserror = "1.0.64"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_path_to_error = "0.1.16"
http = "1.1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
stripmargin = "0.1.1"