[package]
name = "tailcall-valid"
version = "0.1.3"
edition = "2021"
description = "A Rust library for validating multiple inputs, collecting all possible errors instead of failing at the first error. Useful for scenarios where comprehensive feedback is required for user inputs or configuration settings."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_setters = "0.1.6"
regex = "1.11.0"
thiserror = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_path_to_error = "0.1.16"
http = "1.1.0"
wasm-bindgen = "0.2.92"

[dev-dependencies]
pretty_assertions = "1.4.1"
stripmargin = "0.1.1"
gh-workflow-tailcall = "0.1.3"

[features]
default = []
test-feature = []
